# axum-rust-starter

./: .env.example  Cargo.toml  README.md
src/: main.rs  state.rs
src/application/: error.rs
src/config/: db.rs  logger.rs
src/data/: env.rs
src/infrastructure/sql/: order.rs  pagination.rs
src/modules/: mod.rs
src/modules/health/: health_controller.rs  health_dto.rs  health_repository.rs  health_route.rs  health_service.rs  mod.rs
src/modules/health/presentation/: error.rs
src/modules/health/utils/: mod.rs
src/modules/user/: mod.rs  user_controller.rs  user_dto.rs  user_model.rs  user_query.rs  user_repository.rs  user_route.rs  user_service.rs  user_spec.rs
src/modules/user/domain/: model.rs  spec.rs
src/modules/user/persistence/: entity.rs  mod.rs  mutation.rs  query.rs  row.rs
src/modules/user/presentation/: dto.rs  error.rs  mapper.rs  mod.rs
src/modules/user/query/: mod.rs  user_filter.rs  user_join.rs  user_order.rs
src/modules/user_role/: mod.rs  user_role_dto.rs  user_role_model.rs  user_role_query.rs
src/modules/user_role/domain/: model.rs
src/modules/user_role/persistence/: entity.rs  row.rs
src/modules/user_role/presentation/: dto.rs
src/presentation/: error.rs  mod.rs  router.rs  state.rs
src/presentation/http/: common_query.rs  common_response.rs  mod.rs
src/shared/: error.rs  mod.rs  pagination.rs  request.rs  response.rs  state.rs
src/utils/: filter.rs  mod.rs  order.rs  pagination.rs
